--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,3 +25,18 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
 }
+
+def repo = new File(rootDir, "repository")
+
+apply plugin: 'maven'
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository url: "file://${repo.absolutePath}"
+            pom.version = '1.0.0'
+            pom.groupId = 'jp.co.thcomp'
+            pom.artifactId = 'http_abstract_layer'
+        }
+    }
+}
