--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okio:okio:1.6.0'
 }
 
 def repo = new File(rootDir, "repository")
@@ -33,7 +34,7 @@ uploadArchives {
     repositories {
         mavenDeployer {
             repository url: "file://${repo.absolutePath}"
-            pom.version = '1.0.1'
+            pom.version = '1.0.2'
             pom.groupId = 'jp.co.thcomp'
             pom.artifactId = 'http_abstract_layer'
         }
