--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okio:okio:1.6.0'
+    compile 'com.burgstaller:okhttp-digest:1.3'
 }
 
 def repo = new File(rootDir, "repository")
@@ -34,7 +35,7 @@ uploadArchives {
     repositories {
         mavenDeployer {
             repository url: "file://${repo.absolutePath}"
-            pom.version = '1.1.3'
+            pom.version = '1.1.4'
             pom.groupId = 'jp.co.thcomp'
             pom.artifactId = 'http_abstract_layer'
         }
