--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 21
@@ -19,12 +19,17 @@ android {
     }
 }
 
+repositories {
+    maven { url 'http://raw.github.com/thcomp/Android_Utility/master/repository' }
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okio:okio:1.6.0'
     compile 'com.burgstaller:okhttp-digest:1.3'
+    compile 'jp.co.thcomp:android_utility:1.0.+'
 }
 
 def repo = new File(rootDir, "repository")
@@ -35,7 +40,7 @@ uploadArchives {
     repositories {
         mavenDeployer {
             repository url: "file://${repo.absolutePath}"
-            pom.version = '1.1.13'
+            pom.version = '1.1.14'
             pom.groupId = 'jp.co.thcomp'
             pom.artifactId = 'http_abstract_layer'
         }
