--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "1.1.17"
     }
     buildTypes {
         release {
@@ -26,10 +26,11 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.squareup.okio:okio:1.6.0'
-    compile 'com.burgstaller:okhttp-digest:1.3'
-    compile 'jp.co.thcomp:android_utility:1.0.+'
+    implementation 'com.squareup.okhttp3:okhttp:3.2.0'
+    implementation 'com.squareup.okio:okio:1.6.0'
+    implementation 'com.burgstaller:okhttp-digest:1.3'
+    implementation 'jp.co.thcomp:android_utility:1.0.+'
+    implementation 'com.google.code.gson:gson:2.2.4'
 }
 
 def repo = new File(rootDir, "repository")
@@ -40,7 +41,7 @@ uploadArchives {
     repositories {
         mavenDeployer {
             repository url: "file://${repo.absolutePath}"
-            pom.version = '1.1.16'
+            pom.version = '1.1.17'
             pom.groupId = 'jp.co.thcomp'
             pom.artifactId = 'http_abstract_layer'
         }
